# OS1-TP2-Shell

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  INSTALL.md  commands.txt  compilation_command.txt  conanfile.txt  config.json  count_up.c  coverage.info  dummy_log.txt  input.txt  output.txt  shell_built_in_cmds.c.gcov  test_shell-shell_built_in_cmds.gcda  test_shell-shell_built_in_cmds.gcno  test_shell-test_shell_built_in_cmds.gcda  test_shell-test_shell_built_in_cmds.gcno  test_shell-unity.gcda  test_shell-unity.gcno
.github/actions/coverage_and_test/: action.yml
.github/workflows/: QAWorkflow.yml
coverage_html/: index-sort-f.html  index-sort-l.html  index.html
coverage_html/src/: index-sort-f.html  index-sort-l.html  index.html  shell_built_in_cmds.c.func-c.html  shell_built_in_cmds.c.func.html  shell_built_in_cmds.c.gcov.html
coverage_html/tests/: index-sort-f.html  index-sort-l.html  index.html  test_shell_built_in_cmds.c.func-c.html  test_shell_built_in_cmds.c.func.html  test_shell_built_in_cmds.c.gcov.html  unity.c.func-c.html  unity.c.func.html  unity.c.gcov.html
include/: execute_cmds.h  monitor_cmds.h  shell.h  shell_built_in_cmds.h
monitoring_programm_directory/: .gitignore  CMakeLists.txt  Crucial commands.txt
monitoring_programm_directory/include/: expose_metrics.h  metrics.h
monitoring_programm_directory/src/: expose_metrics.c  main.c  metrics.c
src/: execute_cmds.c  monitor_cmds.c  shell.c  shell_built_in_cmds.c
tests/: test_shell_built_in_cmds.c
